[gd_scene load_steps=16 format=2]

[ext_resource path="res://Script/EnvironmentalObjectScript/MinePuzzleStatueScript.gd" type="Script" id=1]
[ext_resource path="res://Images/Environmental Objects/PuzzleStatue.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 3.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 1.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 1.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.5, 1.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3.5, 1.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3, 1.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3, 1.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 1.5, 2.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 1.5, 2.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 2, 4.5 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 2, 3.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 4.5, 1.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 5, 1.5 )

[node name="MinePuzzleStatue" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 1 )

[node name="PuzzleStatue" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="NorthPushArea" type="Area2D" parent="."]
position = Vector2( 0, -6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthPushArea"]
position = Vector2( 0, 1.5 )
shape = SubResource( 2 )

[node name="SouthPushArea" type="Area2D" parent="."]
position = Vector2( 0, 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthPushArea"]
position = Vector2( 0, -0.5 )
shape = SubResource( 3 )

[node name="EastPushArea" type="Area2D" parent="."]
position = Vector2( 6, 0 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="EastPushArea"]
position = Vector2( 0.500002, 0.5 )
shape = SubResource( 4 )

[node name="WestPushArea" type="Area2D" parent="."]
position = Vector2( -6, 0 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="WestPushArea"]
position = Vector2( 0.5, -0.500002 )
shape = SubResource( 5 )

[node name="NorthCollideDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthCollideDetector"]
position = Vector2( 0, -4.5 )
shape = SubResource( 6 )

[node name="SouthCollideDetector2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthCollideDetector2"]
position = Vector2( 0, 5.5 )
shape = SubResource( 7 )

[node name="WestCollideDetector3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WestCollideDetector3"]
position = Vector2( -5.5, 0.5 )
shape = SubResource( 8 )

[node name="EastCollideDetector4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EastCollideDetector4"]
position = Vector2( 5.5, 0.5 )
shape = SubResource( 9 )

[node name="NorthStatueCollide" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NorthStatueCollide"]
position = Vector2( 0, -8.5 )
shape = SubResource( 10 )

[node name="SouthStatueCollide2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SouthStatueCollide2"]
position = Vector2( 0, 8.5 )
shape = SubResource( 11 )

[node name="WestStatueCollide3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WestStatueCollide3"]
position = Vector2( -9.5, 0.5 )
shape = SubResource( 12 )

[node name="EastStatueCollide4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EastStatueCollide4"]
position = Vector2( 10, 0.5 )
shape = SubResource( 13 )

[connection signal="body_entered" from="NorthPushArea" to="." method="_on_NorthPushArea_body_entered"]
[connection signal="body_exited" from="NorthPushArea" to="." method="_on_NorthPushArea_body_exited"]
[connection signal="body_entered" from="SouthPushArea" to="." method="_on_SouthPushArea_body_entered"]
[connection signal="body_exited" from="SouthPushArea" to="." method="_on_SouthPushArea_body_exited"]
[connection signal="body_entered" from="EastPushArea" to="." method="_on_EastPushArea_body_entered"]
[connection signal="body_exited" from="EastPushArea" to="." method="_on_EastPushArea_body_exited"]
[connection signal="body_entered" from="WestPushArea" to="." method="_on_WestPushArea_body_entered"]
[connection signal="body_exited" from="WestPushArea" to="." method="_on_WestPushArea_body_exited"]
[connection signal="area_entered" from="NorthCollideDetector" to="." method="_on_NorthCollideDetector_area_entered"]
[connection signal="area_exited" from="NorthCollideDetector" to="." method="_on_NorthCollideDetector_area_exited"]
[connection signal="area_entered" from="SouthCollideDetector2" to="." method="_on_SouthCollideDetector2_area_entered"]
[connection signal="area_exited" from="SouthCollideDetector2" to="." method="_on_SouthCollideDetector2_area_exited"]
[connection signal="area_entered" from="WestCollideDetector3" to="." method="_on_WestCollideDetector3_area_entered"]
[connection signal="area_exited" from="WestCollideDetector3" to="." method="_on_WestCollideDetector3_area_exited"]
[connection signal="area_entered" from="EastCollideDetector4" to="." method="_on_EastCollideDetector4_area_entered"]
[connection signal="area_exited" from="EastCollideDetector4" to="." method="_on_EastCollideDetector4_area_exited"]
[connection signal="body_entered" from="NorthStatueCollide" to="." method="_on_NorthStatueCollide_body_entered"]
[connection signal="body_exited" from="NorthStatueCollide" to="." method="_on_NorthStatueCollide_body_exited"]
[connection signal="body_entered" from="SouthStatueCollide2" to="." method="_on_SouthStatueCollide2_body_entered"]
[connection signal="body_exited" from="SouthStatueCollide2" to="." method="_on_SouthStatueCollide2_body_exited"]
[connection signal="body_entered" from="WestStatueCollide3" to="." method="_on_WestStatueCollide3_body_entered"]
[connection signal="body_exited" from="WestStatueCollide3" to="." method="_on_WestStatueCollide3_body_exited"]
[connection signal="body_entered" from="EastStatueCollide4" to="." method="_on_EastStatueCollide4_body_entered"]
[connection signal="body_exited" from="EastStatueCollide4" to="." method="_on_EastStatueCollide4_body_exited"]
